# igniters-squad-02-naija-tax-ai

./: .env.example  .gitignore  Contribution.md  Dockerfile  README.md  Task.md  architecture.md  docker-compose.yml  pyproject.toml  requirements.txt
agentic_core/: __init__.py  bank_statement_llm.py  graph.py  llm_config.py  schemas.py  state.py
agentic_core/nodes/: __init__.py  clarification_node.py  guardian_node.py  pit_interview_node.py  sidekick_node.py  strategist_failed_node.py  strategist_node.py
data/finance_acts/: README.md  finance_act_sample.txt
mcp_server/: __init__.py  server.py
mcp_server/data/: pit_dictionary.json
mcp_server/tools/: __init__.py  bank_parser.py  browser_tools.py  pii_scrubber.py  tax_rag.py
models/: bank_statement_models.py
scripts/: launch_firs_portal.py
tests/: test_pit_guardrails.py
ui/: __init__.py  api_client.py  app.py
ui/components/: chat_interface.py  chat_panel.py  file_uploader.py  hitl_panel.py  left_panel.py
utils/: __init__.py  config.py  exceptions.py  guardrails.py  llm_pii_optional.py  logger.py  paths.py  scrubber.py
